--- a/RunCoin/StroyBoards/Base.lproj/Main.storyboard
+++ b/RunCoin/StroyBoards/Base.lproj/Main.storyboard
@@ -1134,7 +1134,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="2Gg-7Y-YNE"/>
                     <navigationItem key="navigationItem" id="dVL-mh-L8a">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="SEu-PU-M09">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="profile_settings" id="SEu-PU-M09">
                             <connections>
                                 <segue destination="OKC-jT-STT" kind="show" identifier="GoToUserSettings" id="a2v-gS-KMR"/>
                             </connections>
@@ -1757,11 +1757,13 @@
             </objects>
             <point key="canvasLocation" x="3129" y="1101"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="OzY-YH-yI3">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2r1-9O-wnM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="6OP-sj-7py"/>
+                    <tabBarItem key="tabBarItem" title="" image="find-friends-unselected" selectedImage="find-friends-selected" id="6OP-sj-7py">
+                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vHn-mr-goG">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -1783,8 +1785,11 @@
         <image name="blankProfileImage" width="136" height="136"/>
         <image name="divider" width="356" height="2"/>
         <image name="drop-shadow-divider" width="375" height="15"/>
+        <image name="find-friends-selected" width="29" height="29"/>
+        <image name="find-friends-unselected" width="29" height="29"/>
         <image name="gradientOutlines" width="30" height="30"/>
         <image name="gradientOutlinesUnselected" width="30" height="30"/>
+        <image name="profile_settings" width="27" height="26"/>
         <image name="runCoinLogo" width="235" height="235"/>
         <image name="runCoinRing_profile" width="35" height="35"/>
     </resources>
